--- a/quizzy/pubspec.yaml
+++ b/quizzy/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.2.1
+  html: ^0.15.4 
 
 
   # The following adds the Cupertino Icons font to your application.
