--- a/Flutter/quizzy/pubspec.yaml
+++ b/Flutter/quizzy/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   html: ^0.15.4 
   geolocator: ^11.0.0
   geocoding: ^3.0.0
+  location: ^5.0.3
+
 
 
   # The following adds the Cupertino Icons font to your application.
