--- a/Flutter/quizzy/pubspec.yaml
+++ b/Flutter/quizzy/pubspec.yaml
@@ -32,9 +32,9 @@ dependencies:
     sdk: flutter
   http: ^1.2.1
   html: ^0.15.4 
-  geolocator: ^11.0.0
   geocoding: ^3.0.0
   location: ^5.0.3
+  sensors_plus: ^5.0.0
 
 
 
