--- a/Flutter/quizzy/pubspec.yaml
+++ b/Flutter/quizzy/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   line_awesome_flutter: ^2.0.0
   firebase_core: ^2.28.0
   firebase_auth: ^4.19.0
+  firebase_storage: ^11.7.0
+  cloud_firestore: ^4.16.0
 
 dev_dependencies:
   flutter_test:
