--- a/Flutter/quizzy/pubspec.yaml
+++ b/Flutter/quizzy/pubspec.yaml
@@ -35,8 +35,11 @@ dependencies:
   geocoding: ^3.0.0
   location: ^5.0.3
   sensors_plus: ^5.0.0
-  qr_code_scanner: 1.0.1 
-
+  qr_code_scanner: 1.0.1
+  qr_flutter: ^4.1.0 
+  path_provider: ^2.1.2
+  permission_handler: ^11.3.1
+  sqflite: ^2.3.3
 
 
   # The following adds the Cupertino Icons font to your application.
