--- a/Flutter/quizzy/pubspec.yaml
+++ b/Flutter/quizzy/pubspec.yaml
@@ -40,7 +40,11 @@ dependencies:
   path_provider: ^2.1.2
   permission_handler: ^11.3.1
   sqflite: ^2.3.3
-
+  firebase_core: ^2.28.0
+  firebase_auth: ^4.19.0
+  firebase_storage: ^11.7.0
+  cloud_firestore: ^4.16.0
+  firebase_app_check: ^0.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -51,9 +55,6 @@ dependencies:
   flutter_riverpod: ^2.5.1
   line_awesome_flutter: ^2.0.0
 
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
